--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,9 @@ target/
 # IPython
 profile_default/
 ipython_config.py
+notebooks/phase1_scrape.py
+notebooks/phase2_nlp.py
+
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
